Fix width of the phone squishing

--- a/styles.css
+++ b/styles.css
@@ -708,7 +708,7 @@ input:hover {
 /* Media query for phone screen squishing */
 @media only screen and (min-width: 600px) and (max-height: 269px) and (orientation: portrait) {
   #form-box {
-    width: 31%;
+    width: 50%;
     height: 90%;
   }
 
